package org.transcom.enums;

public enum LoadStatus {
    POSTED,
    ASSIGNED,
    IN_TRANSIT,
    DELIVERED
}