package org.transcom.enums;

public enum TruckStatus {
    AVAILABLE,
    IN_TRANSIT,
    LOADING,
    UNLOADING
}