@startuml

class User {
    UUID id
    String userName
    String password
    String firstName
    String lastName
    String email
    List<Phone> phones
    Company companyId
    Set<UserRole> roles
    LocalDateTime createdDate
    LocalDateTime updatedDate
    List<Payment> payments
    TariffPlan tariffPlanId
    boolean active
    boolean blocked
    boolean deleted
}

class Phone{
    Long phoneId
    UUID userId
    String phoneNumber
}

class Company {
    Long id
    UUID userId
    String companyName
    String licenseId
    double score
    LocalDateTime createdDate
    LocalDateTime updatedDate
    boolean active
    boolean blocked
    boolean deleted
}

enum UserRole {
    ADMIN
    BROKER
    SUPERVISOR
    MANAGER
    CARRIER
    DISPATCHER
    DRIVER
    CUSTOMER
}

class Truck {
    UUID id
    TruckType type
    int feet
    int weight
    Double capacity
    TruckStatus status
    String location
    User driverId
}

class Load {
    UUID id
    double weight
    int length
    String description
    List<Location> pickupLocations
    List<Location> deliveryLocations
    String countryName
    int trip
    int price
    boolean visiblePrice
    LoadStatus status
    boolean visibleStatus
    Company companyId
    User managerId
    User shipperId
    User driverId
    Track assignedTruckId
    Timestamp createDate
    Timestamp deliveryDate
}

class Location {
    integer id
    integer zipCode
    String localityName
    String stateName
    String countryName
}

class TariffPlan {
    UUID id
    String name
    Double price
    String features
    Integer validityPeriod
    Double discount
}

class Payment {
    UUID id
    UUID userId
    UUID tariffPlanId
    Double amount
    Timestamp paymentDate
}

class Favorite {
    UUID id
    UUID userId
    UUID loadId
    UUID truckId
}

class Statistics {
    UUID id
    String[] topRoutes
    UUID[] topCarriers
    UUID[] topBrokers
    Map<String, Double> profitData
}

enum TruckStatus {
    AVAILABLE
    IN_TRANSIT
    LOADING
    UNLOADING
}

enum LoadStatus {
    POSTED
    ASSIGNED
    IN_TRANSIT
    DELIVERED
}

enum TruckType {
    DRY_VAN
    VAN
    CURTAIN_SIDE_TRAILER
    TAIL_LIFT_TRAILER
    FLATBED
    STEP_DECK_TRAILER
    LOWBOY_TRAILER
    DOUBLE_DROP_TRAILER
    EXTENDABLE_FLATBED_TRAILER
    CONTAINER_TRUCK
    SIDE_WALL_TRAILER
    FLAT_BODY_WITH_VERTICAL_SIDES
    REFRIGERATED_TRAILER
    REEFER_TRAILER
    INSULATED_TRAILER
    MULTICAR_TRAILER
    CAR_HAULER
    DUMP_TRUCK
    TANK_TRAILER
    TANK_FOR_EDIBLE_LIQUIDS
    GENERAL_CHEMICAL_TRAILER
    FUEL_TANKER
    GAS_LNG/LPG_TANK_TRUCK
    GAS_CYLINDER_TRUCK
    BITUMEN_TANK_TRAILER
    FISH_CARRIER
    LIVE_FISH_CARRIER
    POLE_TYPE_TRAILER
    LOGGING_TRUCK
    TIMBER_LORRY
    DRY_BULK_TRAILER
    CEMENT_TANK_TRAILER
    FLOUR_TRUCK
    GRAIN_TRUCK
    CONCRETE_PANEL_TRAILER
    TRAILER_FOR_GLASS_TRANSPORTING
    LIVESTOCK_TRAILER
    CATTLE_TRAILER
    POULTRY_TRUCK/TRAILER
    COIL_TRAILER
    ROLL_TRAILER
    WALKING_FLOOR
    MOVING_FLOOR
}

User "0..*" -- "0..*" Truck : owns
User "1" -- "0..*" Load : ships
User "0..*" -- "1" Company
User "1" -- "0..*" Payment
User "1" -- "0..*" Phone
User "1" -- "1" TariffPlan
Truck "1" -- "0..1" Load : carries
User "1" -- "0..*" Payment : makes
TariffPlan "1" -- "0..*" Payment : related to
User "1" -- "0..*" Favorite : has
Load "1" -- "0..1" Favorite : bookmarked
Load  -- Location
Truck "1" -- "0..1" Favorite : bookmarked
Statistics "1" -- "1" User : tracks

TruckType -- Truck : defines
LoadStatus -- Load : status
TruckStatus -- Truck : status
UserRole "1..*" -- "1" User : roles

@enduml
